# ai_orchestrator

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_GLOBAL_TEMPLATE.md  CHANGELOG.md  INSTALL_LINUX.sh  INSTALL_WINDOWS.cmd  Makefile  PLAN.md  README.md  ai-orch.cmd  ai_orchestrator_mvp_tz.md  pyproject.toml
.ai-orch/: config.yaml
.github/: CODEOWNERS
ai_orchestrator/: __init__.py  __main__.py
docs/: AGENT_TASK_DISTRIBUTION.md  AI_DEV_RULES.md  ARCHITECTURE.md  AUTOPILOT_BATCH_RUN_LOG.md  AUTOPILOT_REAL_AGENT_LOG.md  AUTOPILOT_RUNBOOK.md  BACKLOG.md  CODEBASE_MEMORY_RESEARCH.md  CODEX_WORKFLOW.md  DECISIONS.md  INSTALL.md  LINUX_INSTALL.md  MAC_INSTALL.md  MCP_ACP_RESEARCH.md  MVP_IMPLEMENTATION_PLAN.md  NEXT_AUTOPILOT_PLAN.md  ONBOARDING_GOAL_PLAN.md  PM_SKILLS_ADAPTATION.md  POST_MVP_ROADMAP.md  POST_REVIEW_BACKLOG.md  PUBLICATION_POLICY.md  RELEASE.md  RELEASE_LOG.md  RELEASE_NOTES_TEMPLATE.md  ROBUST_AUTOPILOT_PLAN.md  SECURITY.md  SHIPPING_PACKET_TEMPLATE.md  USER_GUIDE.md  V0_3_GOAL_PLAN.md  V0_5_GOAL_PLAN.md  V0_6_GOAL_PLAN.md  V0_7_GOAL_PLAN.md  V0_8_GOAL_PLAN.md  V0_8_JSON_CONTRACTS.md  V0_8_MCP_ACP_DESIGN_SPIKE.md  V0_9_GOAL_PLAN.md  V1_0_GOAL_PLAN.md  WINDOWS_INSTALL.md
prompts/: adapter_agent.md  architect_agent.md  review_agent.md  security_agent.md  supervisor_agent.md  verification_agent.md
scripts/: check_project.py  install_linux.sh  install_windows.cmd  install_windows.ps1  restart_codex_app.ps1  run_real_agent_smoke.py
tasks/: 001_mvp_bootstrap.md  TASK_TEMPLATE.md
tests/: test_adapter_contract.py  test_autopilot.py  (+25 more)
(+64 files in other folders)
