[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-orchestrator"
version = "0.1.0"
description = "Local supervisor orchestrator for CLI AI agents"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_orchestrator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
