[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-orch"
version = "0.5.1"
description = "Local supervisor orchestrator for CLI AI agents"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[project.scripts]
ai-orch = "ai_orchestrator.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_orchestrator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
packages = ["ai_orchestrator"]
warn_unused_configs = true
